[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "duphunter"
version = "0.1.0"
description = "AST-driven near-duplicate code detector for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "faxik" }]
keywords = ["ast", "duplicate-detection", "code-quality", "refactoring", "mcp", "ai-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
duphunter-near-dup = "duphunter.cli:main"
duphunter-mcp = "duphunter.mcp_server:main"
